<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>adnav_driver</name>
  <version>2.1.1</version>
  <description>Advanced Navigation ROS 2 Driver</description>
  <maintainer email="support@advancednavigation.com">Support</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>geometry_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>adnav_interfaces</depend>

  <build_depend>generate_parameter_library</build_depend>
  <build_depend>uvw_vendor</build_depend>

  <!-- <test_depend>ament_lint_auto</test_depend> -->
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
